--- a/css/contact.css
+++ b/css/contact.css
@@ -28,9 +28,36 @@ form button {
 }
 
 label {
-    max-width: 10rem;
     font-family: 'Hubballi', cursive;
     margin-bottom: 0.5rem;
+    align-self: flex-start;
+}
+
+.required {
+    background-color: rgb(204, 59, 59);
+    padding: 0.35rem;
+    margin-bottom: 0.25rem;
+    font-family: 'Hubballi', cursive;
+    display: flex;
+    color: white;
+    align-self: flex-start;
+    display: none;
+    border-radius: 0.1rem;
+}
+.isValidEmail {
+    background-color: rgb(204, 59, 59);
+    padding: 0.35rem;
+    margin-bottom: 0.25rem;
+    font-family: 'Hubballi', cursive;
+    display: flex;
+    color: white;
+    align-self: flex-start;
+    display: none;
+    border-radius: 0.1rem;
+}
+
+.emailFormat {
+    font-weight: 600;
 }
 
 label~input,
