--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -42,7 +42,6 @@
 @media only screen and (max-width: 1100px) {  /* !!! This break  point value is for the script !!!*/
     .hamburger {
         display: flex;
-        *position: relative;
         z-index: 11;
     }
     .menu {
@@ -51,26 +50,13 @@
         position: absolute;
         top: 0;
         right: 0;
-        padding-top: 5rem;
-        width: 0;
-        transition: all 300ms ease-in-out;
-        opacity: 0;
+        padding-top: 8rem;
         z-index: 10;
+        display: none;
     }
     .menu li {
         margin-top: 1rem;
     }
-    /*
-    .menu li {
-        margin: 1rem auto;
-    }
-    .menu li a {
-        color: azure;
-    }
-    .menu li a:hover {
-        background-color: azure;
-    }
-    */
 }
 
 @media only screen and (max-width: 800px) {
@@ -80,9 +66,10 @@
 }
 
 .menu_after_click {
+    display: flex;
     width: 100%;
     background-color: darkred;
-    opacity: 1;
+    opacity: 0.9;
 }
 
 .menu_after_click a {
