--- a/css/basic.css
+++ b/css/basic.css
@@ -126,9 +126,11 @@ footer {
 
 .info-bar a {
     text-decoration: none;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     font-family: 'M PLUS 2', sans-serif;
+    font-weight: 600;
     user-select: none;
+    color: black;
 }
 
 .info-bar a:hover {
