Background update on privacy page

--- a/css/privacy.css
+++ b/css/privacy.css
@@ -1,7 +1,9 @@
+/*
 body {
     background-color: darkslategrey;
     color: white;
 }
+*/
 
 .privacy-container * {
     font-family: 'Hubballi', cursive;
