--- a/css/privacy.css
+++ b/css/privacy.css
@@ -11,8 +11,9 @@ body {
 
 .privacy-title {
     font-family: 'Hubballi', cursive;
-    text-align: center;
-    margin-top: 2rem;
+    text-align: left;
+    margin: 2rem auto;
+    width: 80%;
 }
 
 .privacy-container {
