Adding min-height: 100vh to the menu_after_click to always cover the whole display

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -68,6 +68,7 @@
 .menu_after_click {
     display: flex;
     width: 100%;
+    min-height: 100vh;
     background-color: darkred;
     opacity: 0.9;
 }
