--- a/css/basic.css
+++ b/css/basic.css
@@ -88,7 +88,8 @@ hr {
     font-family: 'M PLUS 2', sans-serif;
     font-weight: 600;
     user-select: none;
-    color: black;
+    color: rgb(80, 114, 126);
+
 }
 
 .menu a:hover {
@@ -131,7 +132,7 @@ footer {
     font-family: 'M PLUS 2', sans-serif;
     font-weight: 600;
     user-select: none;
-    color: black;
+    color: rgb(117, 91, 74);
 }
 
 .info-bar a:hover {
@@ -168,7 +169,7 @@ footer {
 
 .copyright span {
     padding: 0 0.5rem;
-    color:darkgreen;
+    color: rgb(80, 114, 126);
     font-family: 'Hubballi', cursive;
     text-align: center;
 }
