--- a/css/home.css
+++ b/css/home.css
@@ -138,6 +138,7 @@ button:hover {
         width: 90%;
         padding: 0 0 0.25rem;
         line-height: 2.75rem;
+        margin-top: 1rem;
     }
 
     .middle-container p {
